--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-form-stepper": "^2.0.3",
     "react-scripts": "5.0.1",
     "react-step-wizard": "^5.3.11",
+    "react-use-cart": "^1.13.0",
     "reactstrap": "^9.1.2",
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
